--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Daily Javascript Algorithms</h2>
 </body>
 <script src="Arrays.js"></script>
+<script src="Linked-List.js"></script>
 
 </html>
