--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 </body>
 <script src="Arrays.js"></script>
 <script src="Linked-List.js"></script>
+<script src="Patterns.js"></script>
+<script src="MaxSubarraySum.js"></script>
+<script src="SameFrequency.js"></script>
 
 </html>
