--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <script src="Patterns.js"></script>
 <script src="MaxSubarraySum.js"></script>
 <script src="SameFrequency.js"></script>
+<script src="Anagram.js"></script>
 
 </html>
