--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h2>Daily Javascript Algorithms</h2>
 </body>
-<script src="Arrays.js"></script>
+<script src="RemoveDuplicates.js"></script>
 <script src="Linked-List.js"></script>
-<script src="Patterns.js"></script>
+<script src="CountUniqueValues.js"></script>
 <script src="MaxSubarraySum.js"></script>
 <script src="SameFrequency.js"></script>
 <script src="Anagram.js"></script>
