--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <script src="MaxSubarraySum.js"></script>
 <script src="SameFrequency.js"></script>
 <script src="Anagram.js"></script>
+<script src="Power.js"></script>
+<script src="Factorial.js"></script>
+<script src="ProductOfArray.js"></script>
 
 </html>
