Fibonacci Function Solved

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <script src="Factorial.js"></script>
 <script src="ProductOfArray.js"></script>
 <script src="RecursiveRange.js"></script>
+<script src="Fibonacci.js"></script>
 
 </html>
