--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <script src="ProductOfArray.js"></script>
 <script src="RecursiveRange.js"></script>
 <script src="Fibonacci.js"></script>
+<script src="LinearSearch.js"></script>
 
 </html>
