Binary Search Algo Completed

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <script src="RecursiveRange.js"></script>
 <script src="Fibonacci.js"></script>
 <script src="LinearSearch.js"></script>
+<script src="BinarySearch.js"></script>
 
 </html>
