Linear Search Complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Daily Javascript Algorithms</h2>
 </body>
-<script src="RemoveDuplicates.js"></script>
+<!-- <script src="RemoveDuplicates.js"></script>
 <script src="Linked-List.js"></script>
 <script src="CountUniqueValues.js"></script>
 <script src="MaxSubarraySum.js"></script>
@@ -20,8 +20,10 @@
 <script src="Factorial.js"></script>
 <script src="ProductOfArray.js"></script>
 <script src="RecursiveRange.js"></script>
-<script src="Fibonacci.js"></script>
+<script src="Fibonacci.js"></script> -->
 <script src="LinearSearch.js"></script>
 <script src="BinarySearch.js"></script>
+<script src="BubbleSort.js"></script>
+<script src="SelectionSort.js"></script>
 
 </html>
