Naive String Search Complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Daily Javascript Algorithms</h2>
 </body>
-<!-- <script src="RemoveDuplicates.js"></script>
+<script src="RemoveDuplicates.js"></script>
 <script src="Linked-List.js"></script>
 <script src="CountUniqueValues.js"></script>
 <script src="MaxSubarraySum.js"></script>
@@ -20,10 +20,11 @@
 <script src="Factorial.js"></script>
 <script src="ProductOfArray.js"></script>
 <script src="RecursiveRange.js"></script>
-<script src="Fibonacci.js"></script> -->
-<script src="LinearSearch.js"></script>
-<script src="BinarySearch.js"></script>
-<script src="BubbleSort.js"></script>
-<script src="SelectionSort.js"></script>
+<script src="Fibonacci.js"></script>
+<script src="SearchLinear.js"></script>
+<script src="SearchBinary.js"></script>
+<script src="SortBubble.js"></script>
+<script src="SortSelection.js"></script>
+<script src="SearchNaiveString.js"></script>
 
 </html>
