Insertion Sort Complete

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <script src="SortBubble.js"></script>
 <script src="SortSelection.js"></script>
 <script src="SearchNaiveString.js"></script>
+<script src="SortInsertion.js"></script>
 
 </html>
