Quick sort files added

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
 <script src="SearchNaiveString.js"></script>
 <script src="SortInsertion.js"></script>
 <script src="SortMerge.js"></script>
+<script src="SortQuick.js"></script>
 
 </html>
