Radix Sort Functional

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 <script src="SortInsertion.js"></script>
 <script src="SortMerge.js"></script>
 <script src="SortQuick.js"></script>
+<script src="SortRadix.js"></script>
 
 </html>
