Basic Class Keyword Knowledge

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 <script src="SortMerge.js"></script>
 <script src="SortQuick.js"></script>
 <script src="SortRadix.js"></script>
+<script src="ClassKeyword.js"></script>
 
 </html>
