Class Keyword Complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Daily Javascript Algorithms</h2>
 </body>
 <script src="RemoveDuplicates.js"></script>
-<script src="Linked-List.js"></script>
+<script src="SinglyLinkedList.js"></script>
 <script src="CountUniqueValues.js"></script>
 <script src="MaxSubarraySum.js"></script>
 <script src="SameFrequency.js"></script>
