Push method complete

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 <script src="SortQuick.js"></script>
 <script src="SortRadix.js"></script>
 <script src="ClassKeyword.js"></script>
+<script src="DoublyLinkedLists.js"></script>
 
 </html>
